--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <div class="mobile-menu-items">
                                 <ul>
                                     <li class="menu-item-has-children">
-                                        <a href="index.html">Home</a>
+                                        <a href="index.html">Обо мне</a>
                                         <ul>
                                             <li><a href="index.html">Digital Agency</a></li>
                                             <li><a href="index-2.html">Creative Agency</a></li>
@@ -836,4 +836,5 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
 
