--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
                     <div class="col-lg-7 col-md-12">
                         <div class="about-content fade-wrapper">
                             <div class="section-heading mb-50">
-                                <h4 class="sub-heading" data-text-animation="fade-in" data-duration="1.5">About Us</h4>
-                                <h2 class="section-title" data-text-animation="fade-in-right" data-split="char" data-duration="0.6" data-stagger="0.07">We’re Powerful Agency For Digital Solutions</h2>
+                                <h4 class="sub-heading" data-text-animation="fade-in" data-duration="1.5">О бо мне </h4>
+                                <h2 class="section-title" data-text-animation="fade-in-right" data-split="char" data-duration="0.6" data-stagger="0.07">Специалист по Рекламе</h2>
                             </div>
                             <p class="mb-50 fade-top">Artificial Intelligence refers to the development of computer systems that can perform tasks that would typically require human intelligence. It involves the creation of algorithms and models that enable machines to learn, reason, perceive, and make decisions.</p>
                             <p class="fade-top">There are generally two types of AI: Narrow or Weak AI, which is designed to perform specific tasks, and General or Strong AI, which possesses human-level intelligence and can handle a wide range of tasks.</p>
@@ -836,5 +836,6 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
 
 
