--- a/index.html
+++ b/index.html
@@ -249,7 +249,8 @@
                                 <h4 class="sub-heading" data-text-animation="fade-in" data-duration="1.5">О бо мне </h4>
                                 <h2 class="section-title" data-text-animation="fade-in-right" data-split="char" data-duration="0.6" data-stagger="0.07">Специалист по Рекламе</h2>
                             </div>
-                            <p class="mb-50 fade-top">Artificial Intelligence refers to the development of computer systems that can perform tasks that would typically require human intelligence. It involves the creation of algorithms and models that enable machines to learn, reason, perceive, and make decisions.</p>
+                            <p class="mb-50 fade-top">Машталер Софья Борисовна 
+                            <li>Я люблю оформлять сайты ,делать сувенирную продукцию, а также фотографировать ,анимировать и создавать презентации</li></p>
                             <p class="fade-top">There are generally two types of AI: Narrow or Weak AI, which is designed to perform specific tasks, and General or Strong AI, which possesses human-level intelligence and can handle a wide range of tasks.</p>
                             <div class="about-btn fade-top">
                                 <a href="contact.html" class="rr-primary-btn">Get in Touch</a>
@@ -836,6 +837,7 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
 
 
 
