--- a/index.html
+++ b/index.html
@@ -251,7 +251,10 @@
                             </div>
                             <p class="mb-50 fade-top">Машталер Софья Борисовна 
                             <li>Я люблю оформлять сайты ,делать сувенирную продукцию, а также фотографировать ,анимировать и создавать презентации</li></p>
-                            <p class="fade-top">There are generally two types of AI: Narrow or Weak AI, which is designed to perform specific tasks, and General or Strong AI, which possesses human-level intelligence and can handle a wide range of tasks.</p>
+                            <p class="fade-top">Образование</p>
+                            <p>Образование</p>
+                            <li>Основное образование</li>
+                            Среднее профессиональное образование "Специалист по реклмае"</li>
                             <div class="about-btn fade-top">
                                 <a href="contact.html" class="rr-primary-btn">Get in Touch</a>
                             </div>
@@ -837,6 +840,7 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
 
 
 
