--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                             <div> 
                              </div>
                             <p>Основное образование</p>
-                            <li>Среднее профессиональное образование "Специалист по реклмае"</li>
+                            <li>Среднее профессиональное образование "Специалист по рекламе"</li>
                             <li><h3>Владею</li></h3>
                              <!--- Тут иконки чем владею 257 строчка -->
 
@@ -844,6 +844,7 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
 
 
 
