--- a/index.html
+++ b/index.html
@@ -252,12 +252,12 @@
                             <p><h3>Машталер Софья Борисовна</p></h3>    
                             <p>Я оформляю сайты ,создаю сувенирную продукцию,</p>
                             <p>фотографирую ,анимирую ,создаю фирменный стиль и создаю презентации</p>
-                            <li><h3>Образование</li></h3>
+                            <li><h3>Образование:</li></h3>
                             <div> 
                              </div>
                             <p>Основное образование</p>
                             <p>Среднее профессиональное образование "Специалист по рекламе"</p></li>
-                            <li><h3>Владею</li></h3>
+                            <li><h3>Навыки:</li></h3>
                              <!--- Тут иконки чем владею 257 строчка -->
 
                             <div class="about-btn fade-top">
@@ -845,6 +845,7 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
 
 
 
